--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://cgarcia00.github.io/my-website",
+  "homepage": "http://cgarcia00.github.io",
   "name": "reminder",
   "version": "0.1.0",
   "private": true,
